Fix scrolling for Google Docs on iOS, EPRESS-163

--- a/src/assets/css/embedpress.css
+++ b/src/assets/css/embedpress.css
@@ -110,3 +110,9 @@
 .ose-mixcloud.responsive iframe {
     width: 100%;
 }
+
+/* Fix scrolling on iOS devices */
+.ose-google-docs.responsive {
+    -webkit-overflow-scrolling: touch;
+    overflow-y: auto;
+}
